--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>HONGXIANG'S TEST WEB</h1>
+  <h1>HONGXIANG'Ss TEST WEB</h1>
   <img src="images/image1.jpg" alt="My test image">
   <p>At Mozilla, we're a global community of</p>
 
